2006-06-09  David Reveman  <davidr@novell.com>

	* src/window.c:  Update addWindowSizeChanges so it can be used by
	moveResizeWindow.
	(updateWindowAttributes): Add missing sendSyncRequest call.
	(addWindowSizeChanges): Make maximized window placement a bit better.
	(moveResizeWindow): Adjust window geometry using 
	addWindowSizeChanges. (bnc 183121)

	* src/window.c: Only allow shading on windows with top decoration.

	* src/event.c (handleEvent): Check that shade action is allowed
	before shading a window.

2006-06-08  David Reveman  <davidr@novell.com>

	* plugins/decoration.c (decorInitWindow):
	* plugins/minimize.c (minInitWindow):
	* src/window.c (addWindow): Handle initially shaded windows
	correctly.

	* plugins/switcher.c (switchTerminate): Only use hideWindow
	if switcher window is managed and mapped.
	(switchInitiate): Only use showWindow if switcher window is
	hidden. (bnc 182519)

	* plugins/minimize.c (minHandleEvent): Make sure we adjust the window
	region correctly when it's being unshaded.

2006-06-07  David Reveman  <davidr@novell.com>

	* configure.ac: Bump version to 0.0.13.

	* plugins/compiz.schemas.in.in: Regen.

	* src/window.c: Add window shading support.

	* src/screen.c:
	* src/paint.c:
	* src/event.c: Adjust for window shading support.
	(handleEvent): Handle RESTACK client messages with sibling None
	correctly.

	* src/event.c:
	* src/display.c: Add toggle window shade binding.

	* plugins/minimize.c: Add window shading animation support.

	* plugins/fade.c:
	* plugins/place.c:
	* plugins/resize.c:
	* plugins/scale.c:
	* plugins/switcher.c:
	* plugins/decoration.c: Adjust for window shading support.

	* include/compiz.h: Add window shading support.

	* gnome/window-decorator/gnome-window-decorator.c: lower_window ->
	restack_window and change it so it can be used for both
	raising and lowering a window.
	Add support for double_click_titlebar setting.
	(title_event): Don't activate window on titlebar click only